--- a/manifest.json
+++ b/manifest.json
@@ -5,26 +5,26 @@
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#0f172a",
-  "theme_color": "#0f172a",
+  "background_color": "#FFFFFF",
+  "theme_color": "#FFFFFF",
   "icons": [
     {
-      "src": "https://i.postimg.cc/ZKzvss0R/Screenshot-20260119-222356-Gallery.jpg",
+      "src": "https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_68a6a7036e263b2713cd9fad/91df49946_file_00000000aa68722f9eec4f8233dc4da1.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "https://i.postimg.cc/ZKzvss0R/Screenshot-20260119-222356-Gallery.jpg",
+      "src": "https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_68a6a7036e263b2713cd9fad/91df49946_file_00000000aa68722f9eec4f8233dc4da1.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "https://i.postimg.cc/ZKzvss0R/Screenshot-20260119-222356-Gallery.jpg",
+      "src": "https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_68a6a7036e263b2713cd9fad/91df49946_file_00000000aa68722f9eec4f8233dc4da1.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://i.postimg.cc/ZKzvss0R/Screenshot-20260119-222356-Gallery.jpg",
+      "src": "https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_68a6a7036e263b2713cd9fad/91df49946_file_00000000aa68722f9eec4f8233dc4da1.png",
       "sizes": "512x512",
       "type": "image/png"
     }
