--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "BeelzeChat",
   "short_name": "BeelzeChat",
   "description": "Chat free without limitation",
-  "start_url": "/",
+  "start_url": "./index.html",
   "scope": "/",
   "display": "standalone",
   "background_color": "#FFFFFF",
