--- a/manifest.json
+++ b/manifest.json
@@ -9,22 +9,22 @@
   "theme_color": "#FFFFFF",
   "icons": [
     {
-      "src": "https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_68a6a7036e263b2713cd9fad/91df49946_file_00000000aa68722f9eec4f8233dc4da1.png",
+      "src": " https://i.postimg.cc/mD0dbHM0/1000287857.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_68a6a7036e263b2713cd9fad/91df49946_file_00000000aa68722f9eec4f8233dc4da1.png",
+      "src": " https://i.postimg.cc/mD0dbHM0/1000287857.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_68a6a7036e263b2713cd9fad/91df49946_file_00000000aa68722f9eec4f8233dc4da1.png",
+      "src": "https://i.postimg.cc/mD0dbHM0/1000287857.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_68a6a7036e263b2713cd9fad/91df49946_file_00000000aa68722f9eec4f8233dc4da1.png",
+      "src": "",
       "sizes": "512x512",
       "type": "image/png"
     }
